# postgres-mcp

./: .env.example  CLAUDE.md  Dockerfile  LICENSE  PUBLISHING.md  README.md  devenv.nix  docker-compose.yml  docker-entrypoint.sh  justfile  plan.md  pyproject.toml  smithery.yaml
.github/workflows/: build.yml  docker-build-dockerhub.yml  pypi-publish.yml
src/postgres_mcp/: __init__.py  server.py
src/postgres_mcp/database_health/: sequence_health_calc.py
src/postgres_mcp/migrations/: __init__.py  migration_manager.py  migration_tracker.py  schema_diff.py  schema_pull.py
src/postgres_mcp/sql/: safe_sql.py
src/postgres_mcp/top_queries/: top_queries_calc.py
tests/integration/migrations/: __init__.py  test_migration_integration.py
tests/unit/migrations/: __init__.py  test_migration_manager.py  test_migration_tracker.py  test_schema_diff.py  test_schema_pull.py
tests/unit/server/: test_cli_args.py  test_cors.py
